docs/fix: swagger endpoint remove tail /
