# docs/swagger.json
@@ -8,7 +8,7 @@
     "host": "localhost:8000",
     "basePath": "/api",
     "paths": {
-        "/auth/refresh/": {
+        "/auth/refresh": {
             "get": {
                 "security": [
                     {
@@ -51,7 +51,7 @@
                 }
             }
         },
-        "/auth/sign-in/": {
+        "/auth/sign-in": {
             "get": {
                 "description": "Get access \u0026 refresh tokens",
                 "consumes": [
